tests/ui/feature-gates/feature-gate-cfg-accessible.stderr
error[E0658]: `cfg(accessible(..))` is experimental and subject to change
  --> $DIR/feature-gate-cfg-accessible.rs:2:7
   |
LL | #[cfg(accessible())]
   |       ^^^^^^^^^^^^
   |
   = note: see issue #64797 <https://github.com/rust-lang/rust/issues/64797> for more information
   = help: add `#![feature(cfg_accessible)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: expected cfg-accessible path, starting with `::`, and consisting of module names and item names
  --> $DIR/feature-gate-cfg-accessible.rs:2:7
   |
LL | #[cfg(accessible())]
   |       ^^^^^^^^^^^^
   |
   = note: cfg-accessible paths start with `::`, followed by zero, one or more (maybe reexported) module name identifiers each followed by `::` in the middle, and then followed by item name identifier at the end

error[E0565]: unsupported literal
  --> $DIR/feature-gate-cfg-accessible.rs:5:18
   |
LL | #[cfg(accessible(42))]
   |                  ^^

error[E0658]: `cfg(accessible(..))` is experimental and subject to change
  --> $DIR/feature-gate-cfg-accessible.rs:7:7
   |
LL | #[cfg(accessible(::std::boxed::Box))]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #64797 <https://github.com/rust-lang/rust/issues/64797> for more information
   = help: add `#![feature(cfg_accessible)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(accessible(..))` is experimental and subject to change
  --> $DIR/feature-gate-cfg-accessible.rs:10:11
   |
LL | #[cfg(not(accessible(::std::boxed::Box)))]
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #64797 <https://github.com/rust-lang/rust/issues/64797> for more information
   = help: add `#![feature(cfg_accessible)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(accessible(..))` is experimental and subject to change
  --> $DIR/feature-gate-cfg-accessible.rs:13:7
   |
LL | #[cfg(accessible(::std::nonexistent::item, ::nonexistent2::item))]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #64797 <https://github.com/rust-lang/rust/issues/64797> for more information
   = help: add `#![feature(cfg_accessible)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: expected cfg-accessible path, starting with `::`, and consisting of module names and item names
  --> $DIR/feature-gate-cfg-accessible.rs:13:7
   |
LL | #[cfg(accessible(::std::nonexistent::item, ::nonexistent2::item))]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: cfg-accessible paths start with `::`, followed by zero, one or more (maybe reexported) module name identifiers each followed by `::` in the middle, and then followed by item name identifier at the end

error[E0658]: `cfg(accessible(..))` is experimental and subject to change
  --> $DIR/feature-gate-cfg-accessible.rs:16:11
   |
LL | #[cfg(not(accessible(::std::nonexistent::item)))]
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #64797 <https://github.com/rust-lang/rust/issues/64797> for more information
   = help: add `#![feature(cfg_accessible)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(accessible(..))` is experimental and subject to change
  --> $DIR/feature-gate-cfg-accessible.rs:19:7
   |
LL | #[cfg(accessible(::nonexistent_crate::item))]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #64797 <https://github.com/rust-lang/rust/issues/64797> for more information
   = help: add `#![feature(cfg_accessible)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `cfg(accessible(..))` mentioned external crate is not accessible
  --> $DIR/feature-gate-cfg-accessible.rs:19:20
   |
LL | #[cfg(accessible(::nonexistent_crate::item))]
   |                    ^^^^^^^^^^^^^^^^^

error[E0658]: `cfg(accessible(..))` is experimental and subject to change
  --> $DIR/feature-gate-cfg-accessible.rs:22:11
   |
LL | #[cfg(not(accessible(::nonexistent_crate::item)))]
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #64797 <https://github.com/rust-lang/rust/issues/64797> for more information
   = help: add `#![feature(cfg_accessible)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `cfg(accessible(..))` mentioned external crate is not accessible
  --> $DIR/feature-gate-cfg-accessible.rs:22:24
   |
LL | #[cfg(not(accessible(::nonexistent_crate::item)))]
   |                        ^^^^^^^^^^^^^^^^^

error[E0658]: `cfg(accessible(..))` is experimental and subject to change
  --> $DIR/feature-gate-cfg-accessible.rs:30:18
   |
LL |     assert!(cfg!(accessible(::std::boxed::Box)));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #64797 <https://github.com/rust-lang/rust/issues/64797> for more information
   = help: add `#![feature(cfg_accessible)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `cfg(accessible(..))` is experimental and subject to change
  --> $DIR/feature-gate-cfg-accessible.rs:31:19
   |
LL |     assert!(!cfg!(accessible(::nonexistent::item)));
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #64797 <https://github.com/rust-lang/rust/issues/64797> for more information
   = help: add `#![feature(cfg_accessible)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `cfg(accessible(..))` mentioned external crate is not accessible
  --> $DIR/feature-gate-cfg-accessible.rs:31:32
   |
LL |     assert!(!cfg!(accessible(::nonexistent::item)));
   |                                ^^^^^^^^^^^

error[E0425]: cannot find function `baz` in this scope
  --> $DIR/feature-gate-cfg-accessible.rs:29:5
   |
LL | fn bar() -> bool { true }
   | ---------------- similarly named function `bar` defined here
...
LL |     baz();
   |     ^^^ help: a function with a similar name exists: `bar`

error: aborting due to 16 previous errors

Some errors have detailed explanations: E0425, E0565, E0658.
For more information about an error, try `rustc --explain E0425`.
